--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="content">
-      <form method="POST">
+      <form data-form="form">
         <div class="form-container">
           <hr />
           <img class="logo" src="./logo.png" alt="Auto-Mart" />
@@ -24,5 +24,9 @@
         </div>
       </form>
     </div>
+
+    <script type="module" src="./storage.js"></script>
+    <script type="module" src="./formhandler.js"></script>
+    <script type="module" src="./signup.js"></script>
   </body>
 </html>
