feature(sign-up):validate details and set session
[FINISHES #165907461]

--- a/signin.html
+++ b/signin.html
@@ -13,16 +13,11 @@
         <div class="form-container">
           <hr />
           <img class="logo" src="./logo.png" alt="Auto-Mart" />
-          <h1>Sign Up</h1>
-          <p>Please fill the form to register.</p>
-          <input type="text" name="firstname" id="firstname" placeholder="First name" />
-          <input type="text" name="lastname" id="lastname" placeholder="Last name" />
+          <h1>Sign In</h1>
           <input type="email" name="email" id="email" placeholder="Email address" />
           <input type="password" name="password" id="password" placeholder="Password" />
-          <input type="password" name="repassword" id="repassword" placeholder="Confirm password" />
-          <div class="error" data-error="text"></div>
-          <button class="btn-prim" type="submit">Sign Up</button>
-          <a href="#">Already registered? Sign in</a>
+          <button class="btn-prim" type="submit">Sign In</button>
+          <a href="#">Not registered? Sign up</a>
         </div>
       </form>
     </div>
