feature(sign-in):create sign in page
[STARTS #165907475]

--- a/signin.html
+++ b/signin.html
@@ -16,6 +16,7 @@
           <h1>Sign In</h1>
           <input type="email" name="email" id="email" placeholder="Email address" />
           <input type="password" name="password" id="password" placeholder="Password" />
+          <div class="error" data-error="text"></div>
           <button class="btn-prim" type="submit">Sign In</button>
           <a href="#">Not registered? Sign up</a>
         </div>
@@ -24,6 +25,6 @@
 
     <script type="module" src="./storage.js"></script>
     <script type="module" src="./formhandler.js"></script>
-    <script type="module" src="./signup.js"></script>
+    <script type="module" src="./signin.js"></script>
   </body>
 </html>
