feature(post-car):validate and save car details
[FINISHES #165907481]

--- a/postcar.html
+++ b/postcar.html
@@ -17,31 +17,30 @@
         <div class="car-spec">
           <h2>Car Specification</h2>
           <label for="make">Make <span class="required">*</span></label>
-          <input type="text" name="model" id="Model" placeholder="e.g. Toyota" />
+          <input type="text" name="model" id="Model" placeholder="e.g. Toyota" required />
           <label for="model">Model <span class="required">*</span></label>
-          <input type="text" name="model" id="model" placeholder="e.g. Corolla" />
+          <input type="text" name="model" id="model" placeholder="e.g. Corolla" required />
           <label for="year">Year <span class="required">*</span></label>
-          <input type="number" name="year" id="year" min="1800" max="2019" placeholder="e.g. 2010" />
+          <input type="number" name="year" id="year" min="1800" max="2019" placeholder="e.g. 2010" required />
           <label for="color">Color <span class="required">*</span></label>
-          <input type="text" name="color" id="color" placeholder="e.g. Red" />
+          <input type="text" name="color" id="color" placeholder="e.g. Red" required />
           <label for="bodytype">Body Type</label>
           <input type="text" name="bodytype" id="bodytype" placeholder="e.g. Sedan" />
           <label for="mileage">Mileage</label>
           <input type="number" name="mileage" id="mileage" placeholder="-- none --" />
-          <input type="file" name="photo" id="photo" />
-          <img class="car-photo" src="https://via.placeholder.com/640x480?text=A+car+sample" alt="car photo" />
+          <input type="file" name="photo" id="photo" data-car="file" />
+          <img data-car="image" class="car-photo" src="./sample_car.png" alt="car photo" />
           <label for="description">Description</label>
           <textarea class="description" name="description" id="description" cols="30" rows="5" placeholder="...describe your car here"></textarea>
-          <div class="submit-container">
-            <div class="car-price"></div>
-            <div class="error" data-error="text"></div>
-            <button class="btn-prim" type="submit">Post Car</button>
-          </div>
+          <label for="price">Price (₦) <span class="required">*</span></label>
+          <input class="car-price" type="number" name="price" id="price" required />
+          <div class="error" data-error="text"></div>
+          <button class="btn-prim" type="submit">Post Car</button>
         </div>
       </form>
     </div>
     <script type="module" src="./storage.js"></script>
     <script type="module" src="./formhandler.js"></script>
-    <script type="module" src="./signup.js"></script>
+    <script type="module" src="./postcar.js"></script>
   </body>
 </html>
