--- a/postcar.html
+++ b/postcar.html
@@ -17,7 +17,7 @@
         <div class="car-spec">
           <h2>Car Specification</h2>
           <label for="make">Make <span class="required">*</span></label>
-          <input type="text" name="model" id="Model" placeholder="e.g. Toyota" required />
+          <input type="text" name="make" id="make" placeholder="e.g. Toyota" required />
           <label for="model">Model <span class="required">*</span></label>
           <input type="text" name="model" id="model" placeholder="e.g. Corolla" required />
           <label for="year">Year <span class="required">*</span></label>
@@ -26,7 +26,7 @@
           <input type="text" name="color" id="color" placeholder="e.g. Red" required />
           <label for="bodytype">Body Type</label>
           <input type="text" name="bodytype" id="bodytype" placeholder="e.g. Sedan" />
-          <label for="mileage">Mileage</label>
+          <label for="mileage">Mileage (km)</label>
           <input type="number" name="mileage" id="mileage" placeholder="-- none --" />
           <input type="file" name="photo" id="photo" data-car="file" />
           <img data-car="image" class="car-photo" src="./sample_car.png" alt="car photo" />
