bug(page-link):fix page link target

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
           <input type="password" name="repassword" id="repassword" placeholder="Confirm password" />
           <div class="error" data-error="text"></div>
           <button class="btn-prim" type="submit">Sign Up</button>
-          <a href="#">Already registered? Sign in</a>
+          <a href="./signin.html">Already registered? Sign in</a>
         </div>
       </form>
     </div>
