--- a/signin.html
+++ b/signin.html
@@ -18,7 +18,7 @@
           <input type="password" name="password" id="password" placeholder="Password" />
           <div class="error" data-error="text"></div>
           <button class="btn-prim" type="submit">Sign In</button>
-          <a href="#">Not registered? Sign up</a>
+          <a href="./signup.html">Not registered? Sign up</a>
         </div>
       </form>
     </div>
