feature(posted-car):mark posted car as sold
[FINISHES #165907501]

--- a/postedcars.html
+++ b/postedcars.html
@@ -9,39 +9,14 @@
   </head>
   <body>
     <h1>Posted Cars</h1>
-    <h2>Mark your <b>car</b> as sold</h2>
-    <div class="cars">
-      <div class="card">
+    <h2>View your posted <b>cars</b></h2>
+     <div data-car="list" class="cars">
+     <div class="card dummy"  data-car="card">
         <img src="./sample_car.png" alt="car photo" />
         <span class="summary">Toyota Corolla 2010</span>
         <button>sold</button>
       </div>
-      <div class="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <span class="summary">Toyota Corolla 2010</span>
-        <button>sold</button>
-      </div>
-      <div class="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <span class="summary">Toyota Corolla 2010</span>
-        <button>sold</button>
-      </div>
-      <div class="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <span class="summary">Toyota Corolla 2010</span>
-        <button>sold</button>
-      </div>
-      <div class="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <span class="summary">Toyota Corolla 2010</span>
-        <button>sold</button>
-      </div>
-      <div class="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <span class="summary">Toyota Corolla 2010</span>
-        <button>sold</button>
-      </div>
-    </div>
+    </div> 
     <script type="module" src="./postedcars.js"></script>
   </body>
 </html>
