feature(view-car):display specific car
[Finishes #165907512]

--- a/index.html
+++ b/index.html
@@ -12,199 +12,8 @@
       <div class="card" data-car="card">
         <img src="./sample_car.png" alt="car photo" />
         <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
-        </span>
-        <span class="price">₦ 5 000</span>
-        <button>view</button>
-      </div>
-      <div class="card" data-car="card">
-        <img src="./sample_car.png" alt="car photo" />
-        <h3 class="summary">Blue Toyota Corolla 2010</h3>
-        <span class="description">Describing the description of this description
-          of this
-          description
-          of this description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description of this description of this
-          description of this description
+        <span class="description">
+          Describing the description of this description of this description
         </span>
         <span class="price">₦ 5 000</span>
         <button>view</button>
