feature(test-PR): test how PR works

--- a/admin-index.html
+++ b/admin-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./admin-index.css">
     <title>Auto-Mart</title>
   </head>
   <body>
@@ -39,8 +40,8 @@
           </span>
           <span class="price">₦ 5 000</span>
           <button>view</button>
-          <a class="report" href="">
-            <span>Report as fradulent</span>
+          <a class="delete" href="">
+            <span>Delete</span>
           </div>
         </a>
       </div>
